Fix for Multi-culture UI issue in wok settings tab
Issue is, text in table header/cells are truncated in settings tab.

Changed required HTML,css and JS files

Message-Id: <1480583977-30204-2-git-send-email-nagamanc@linux.vnet.ibm.com>

--- a/ui/css/src/settings.scss
+++ b/ui/css/src/settings.scss
@@ -30,6 +30,7 @@
 #wok-root-container{
     .accordion {
         @include wok-accordion();
+        margin: 12px 10px 12px 0px !important;
     }
 }
 
